fixed issue with header flexbox not wrapping when screen width gets smaller as it nears mobile state

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ footer p {
   header {
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     padding: 10px 15px;
   }
